# Pong_Raylib

./: CMakeLists.txt  README.md
src/: globals.c  globals.h  main.c
src/management/: game-manager.c  game-manager.h  gui-manager.c  gui-manager.h
src/objects/: ball.c  ball.h  paddle.c  paddle.h
